<resources>
    <string name="app_name">Travel Log</string>

    <string name="action_settings">Settings</string>
    <string name="menu_exit">Exit Travel Log</string>

    <string name="capture_time">C</string>
    <string name="record_time">R</string>
    <string name="location">Location</string>
    <string name="arrived">Arrived</string>
    <string name="departed">Departed</string>
    <string name="time_elapsed">Arrived</string>
    <string name="fast_train">Fast Train?</string>
    <string name="date_label">Date:</string>
    <string name="towork">To Work</string>
    <string name="tohome">To Home</string>
    <string name="timehint">Enter time</string>
    <string name="commenthint">Enter comment if required</string>
    <string name="title">Welcome to the Travel Log App</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="button_log_travel">Log Travel</string>
    <string name="button_review_log">Review Log</string>

</resources>
